--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,6 @@
 {
   "extends": [
-    "standard"
+    "airbnb-base"
   ],
   "env": {
     "browser": true,
@@ -10,5 +10,9 @@
   "parser": "babel-eslint",
   "parserOptions": {
     "sourceType": "module"
+  },
+  "rules": {
+    "import/no-unresolved": "off",
+    "no-console": "off",
   }
 }
