--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "copy-webpack-plugin": "^4.5.0",
     "css-loader": "^0.28.9",
     "eslint": "^4.19.0",
+    "eslint-config-airbnb": "^16.1.0",
     "eslint-config-standard": "^11.0.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^2.0.0",
@@ -56,8 +57,8 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.3",
     "url-loader": "^1.0.1",
-    "webpack": "^4.3.0",
-    "webpack-cli": "^2.0.13",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.14",
     "webpack-dev-server": "^3.1.1"
   },
   "browserslist": [
