--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "private": true,
   "scripts": {
     "new": "node createPage.js",
-    "dev": "webpack-dev-server --mode development",
-    "watch": "webpack --mode development --watch",
-    "build": "webpack --mode production",
+    "dev": "webpack-dev-server --env.mode='development'",
+    "dev:https": "webpack-dev-server --https --env.mode='development'",
+    "watch": "webpack --env.mode='development' --watch",
+    "build": "webpack --mode --env.mode='production'",
     "postbuild": "html dist/*.html --indent-size 2"
   },
   "dependencies": {
