--- a/.eslintrc
+++ b/.eslintrc
@@ -11,8 +11,15 @@
   "parserOptions": {
     "sourceType": "module"
   },
+  "settings": {
+    "import/resolver": {
+      "webpack": {
+        "config": "./webpack.config.js"
+      }
+    }
+  },
   "rules": {
     "import/no-unresolved": "off",
-    "no-console": "off",
+    "no-console": "off"
   }
 }
