--- a/.eslintrc
+++ b/.eslintrc
@@ -19,7 +19,9 @@
     }
   },
   "rules": {
+    "import/extensions": "off",
     "import/no-unresolved": "off",
-    "no-console": "off"
+    "no-console": "off",
+    "no-param-reassign": ["error", { "props": false }]
   }
 }
