--- a/.babelrc
+++ b/.babelrc
@@ -9,6 +9,6 @@
       }
     ]
   ],
-  "plugins": ["transform-runtime"],
+  "plugins": ["transform-runtime", "syntax-dynamic-import"],
   "ignore": ["/node_modules/"]
 }
