--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev:https": "webpack-dev-server --host 0.0.0.0 --https --env.mode='development'",
     "watch": "webpack --env.mode='development' --watch",
     "build": "webpack --env.mode='production'",
+    "build:dev": "webpack --env.mode='simulation'",
     "postbuild": "html dist/*.html --indent-size 2"
   },
   "dependencies": {
@@ -28,6 +29,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-es2017": "^6.24.1",
     "babel-runtime": "^6.26.0",
     "clean-webpack-plugin": "^0.1.18",
     "copy-webpack-plugin": "^4.5.0",
