--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,7 @@
 {
   "presets": [
     [
-      "es2017"
+      "babel-preset-env"
     ]
   ],
   "plugins": ["transform-runtime", "syntax-dynamic-import"],
