--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "picturefill": "^3.0.2"
   },
   "devDependencies": {
+    "file-loader": "^1.1.11",
     "art-template-loader": "^1.4.3",
     "autoprefixer": "^8.2.0",
     "babel-core": "^6.26.0",
@@ -37,8 +38,8 @@
     "css-loader": "^0.28.9",
     "eslint": "^4.19.0",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-friendly-formatter": "^3.0.0",
+    "eslint-config-standard": "^12.0.0-alpha.0",
+    "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-node": "^6.0.1",
@@ -46,6 +47,7 @@
     "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "happypack": "^5.0.0",
     "html-cli": "^1.0.0",
     "html-webpack-plugin": "^3.0.4",
     "node-sass": "^4.7.2",
@@ -59,12 +61,15 @@
     "postcss-simple-vars": "^4.1.0",
     "postcss-url": "^7.3.1",
     "raw-loader": "^0.5.1",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.20.3",
+    "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0",
+    "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.14",
-    "webpack-dev-server": "^3.1.1"
+    "vue-loader": "^15.0.9",
+    "vue-template-compiler": "^2.5.16",
+    "webpack": "^4.8.3",
+    "webpack-cli": "^2.1.3",
+    "webpack-dev-server": "^3.1.4"
   },
   "browserslist": [
     "> 1%",
